--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <h1>Seattle Tech Events Resource Guide Webpage</h1>
+    <h1>Seattle Tech Events Resource Guide</h1>
     <p>Clever content goes here</p>
     <p>Clever content goes here</p>
     <p>Clever content goes here</p>
