Sabra corrects code error.

--- a/networking-events.html
+++ b/networking-events.html
@@ -21,7 +21,7 @@
 
            <h3>Seattle Networking Events</h3>
       
-<!--LIST OF EXTERNAL LINKS --- SHOULD THIS BE BUILT AS A TABLE WITH 4 COLUMNS (INCLUDING COST??) -->         
+<!--LIST OF EXTERNAL LINKS -- SHOULD THIS BE BUILT AS A TABLE WITH 4 COLUMNS (INCLUDING COST??)?? -->         
             <ul>
                 <li><a href="https://www.geekwire.com/?s=tech"> GeekWire </a> GeekWire is a great place to find free tech community events with an array of different topics.</li>
                 <li><a href="https://www.adasbooks.com/event">Ada's Technical Bookstore Events Calendar</a> Ada's is a technical bookstore with workshops and networking events. Some of the events cost money.</li>
