Sabra corrects code error.

--- a/workshop-events.html
+++ b/workshop-events.html
@@ -21,7 +21,7 @@
 
            <h3>Seattle Workshop Events</h3>
       
-<!--LIST OF EXTERNAL LINKS --- SHOULD THIS BE BUILT AS A TABLE WITH 4 COLUMNS (INCLUDING COST??)?? -->         
+<!--LIST OF EXTERNAL LINKS -- SHOULD THIS BE BUILT AS A TABLE WITH 4 COLUMNS (INCLUDING COST??)?? -->         
             <ul>
                 <li><a href="https://www.betterengineering.org/"> Better Engineering </a> Better Engineering courses are taught by instructors who are in the industry on topics ranging from the future of computing to tech interviews.</li>
                 <li><a href="https://www.linuxfestnorthwest.org/conferences/2020">Linux Fest Northwest (April)</a> Every April Bellingham Tech hosts LinuxFest Northwest. Although this is outside Seattle, it's a very fun and interesting conference.</li>
