Modifies index, workshop and networking files

--- a/networking.html
+++ b/networking.html
@@ -65,7 +65,9 @@
             </tr>
          </table>
         
-    <!--Add a button (back to index.html) here-->
+   
+         <a href="index.html"><button>Back to Home</button></a>
+        
     </section>
 
   <!--FOOTER-->
