--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          
      <section> 
            <h2>How to connect to tech communities in Seattle?</h2>
-            <p>This is the site that shows you all the tech events happening in Seattle! You're Welcome!</p>
+            <p>This is the site that shows you all the tech events happening in Seattle! You're welcome!</p>
             <p><!--Jessica's writing goes here--></p>
      </section>
          
