--- a/networking-events.html
+++ b/networking-events.html
@@ -35,7 +35,7 @@
 
   <!--FOOTER-->
          <footer>
-          <p><small>&copy; 2019 by <a href="contact.php">Contact Sabra </a>, All Rights Reserved ~ <a href="http://validator.w3.org/check/referer" target="_blank">Valid HTML</a> ~ <a href="http://jigsaw.w3.org/css-validator/check?uri=referer" target="_blank">Valid CSS</a></small></p>
+          <p><small>&copy; 2019, All Rights Reserved ~ <a href="http://validator.w3.org/check/referer" target="_blank">Valid HTML</a> ~ <a href="http://jigsaw.w3.org/css-validator/check?uri=referer" target="_blank">Valid CSS</a></small></p>
         </footer>
        
   </main>
