Commit first text for review

--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
      </header>
          
      <section> 
-           <h2>How to connect to tech communities in Seattle?</h2>
-            <p>This is the site that shows you all the tech events happening in Seattle! You're welcome!</p>
-            <p><!--Jessica's writing goes here--></p>
+           <h2>Why connect to tech communities in Seattle?</h2>
+            <li>Foster relationships with new professional contacts</li>
+            <li>Build projects with teams and gain experience</li>
+            <li>Create community with fellow tech industry professionals</li>
+            <li>Refresh existing skills and stay current on trends</li>
+            <li>Learn new skills to stay competitive</li>
+            <li>Find potential job referrals and references</li>
+            <li>Contribute your knowledge and exchange ideas</li>
      </section>
          
      <section>
