--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
          
      <section> 
            <h2>Why connect to tech communities in Seattle?</h2>
+            <!-- <p>This is the site that shows you all the tech events happening in Seattle! You're welcome!</p> -->
             <li>Foster relationships with new professional contacts</li>
             <li>Build projects with teams and gain experience</li>
             <li>Create community with fellow tech industry professionals</li>
@@ -33,7 +34,43 @@
             <li>Learn new skills to stay competitive</li>
             <li>Find potential job referrals and references</li>
             <li>Contribute your knowledge and exchange ideas</li>
+
      </section>
+
+     <section> 
+        <h2>Focus on your goals to select which events to attend</h2>
+        <ul>Questions like these can help narrow down which events are better suited to help you achieve your goals and keep up motivation to continue networking: </ul>
+         <li>Are you new to Seattle and just trying to discover people in the industry?</li>
+         <li>If you’re job seeking, are you looking at specific companies or positions?</li>
+         <li>Do you have skillsets you’re trying to grow or share with others?</li>
+         <li>Are you interested in certain programming languages?</li>
+
+         <p>They can also help you plan your approach to the event beforehand...</p>
+
+  </section>
+
+  <section> 
+    <h2>Plan to network</h2>
+    <p>At most networking events, you will have to market yourself in an effective and concise way, so be prepared to pitch yourself!</p>
+     <ul>Be able to speak to your current state in just a few sentences: </ul>
+     <li>Where do you work and what do you do?</li>
+     <li>If you’re a student, where and what are you studying?</li>
+     <li>What is your professional history?</li>
+     <li>If what you’ve done diverges from what you’d like to do, why the transition?</li>
+     <li>What do you want?</li>
+     <ul>Practice your responses to standard questions like these so communication is natural, flows easily, and you can divert your energy to unanticipated prompts.</ul>
+     <ul>Are you looking to speak to specific individuals?</ul>
+     <li>Use resources like LinkedIn to ask about their path into and through the industry</li>
+     <li>Research relevant company websites for details (you may have questions too!)</li>
+     <ul>Draw connections between yourself and the industry and ask questions--conversation lulls happen!</ul>
+     <li>Find ways to be relatable and engaging through prepared talking points</li>
+     <ul>Think about how current events create ripple events through the industry.</ul>
+     <li><i>Will the acquisition of X necessitate departmental restructuring?</i></li>
+     <ul>If you’re having difficulty learning concepts, ask questions reminiscent of their learning experience and welcome tips or suggestions.</ul>
+     <ul>Demonstrate your curiosity through inquiry and good feedback</ul>
+     <li>Company blogs and articles can be good ways to check the temperature of certain subjects</li>
+
+</section>
          
      <section>
          <h3>Networking</h3>
