--- a/networking-events.html
+++ b/networking-events.html
@@ -7,8 +7,16 @@
     <meta charset="utf-8" />
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width" />
-      
+    <link href="css/style.css" type="text/css"  rel="stylesheet">
+   <head>   
     <style>
+      body {
+            background-image:url("https://download.hipwallpaper.com/desktop/1920/1080/31/49/7Zwl3R.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 950px;
+           }
+      
         table {
           font-family: arial, sans-serif;
           border-collapse: collapse;
@@ -25,7 +33,6 @@
           background-color: #dddddd;
         }
       </style>
- </head>
  <body>
      <main>
      <header>
