Corrects typo in both events files

--- a/networking-events.html
+++ b/networking-events.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width" />
     <link href="css/style.css" type="text/css"  rel="stylesheet">
-   <head>   
+     
     <style>
       body {
             background-image:url("https://download.hipwallpaper.com/desktop/1920/1080/31/49/7Zwl3R.jpg");
@@ -33,6 +33,7 @@
           background-color: #dddddd;
         }
       </style>
+ </head>
  <body>
      <main>
      <header>
