--- a/workshop-events.html
+++ b/workshop-events.html
@@ -42,6 +42,13 @@
      <main>
      <header>
      <h1><a>Seattle Tech Workshop Events for Continuing Education and Certificates</a></h1>
+         <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="networking-events.html">Networking</a></li>
+                <li><a href="workshop-events.html">Workshops</a></li>
+            </ul> 
+        </nav>  
   </header>
          
     <section> 
